fix: avoid layout shift when logo loads

--- a/src/options/style.css
+++ b/src/options/style.css
@@ -15,6 +15,7 @@ aside {
   background: #fafafa;
   img {
     width: 5rem;
+    height: 5rem;
   }
 }
 .aside-menu {
